# bitlog

./: CMakeLists.txt  README.md  bitlog.cxx  bitlog.h  main1.cpp  main1.cxx  main2.cpp  main2.cxx
benchmarks/hot_path_latency/: CMakeLists.txt  hot_path_bench.h  hot_path_bench_config.h  hot_path_system_clock_bench.cpp
include/bitlog/: backend.h  bitlog-inl.h  bitlog.h  core.h  frontend.h
include/bitlog/backend/: backend_impl.h  backend_types.h  backend_utilities.h  cached_timestamp_builder.h  decode.h  pattern_formatter.h  rdtsc_clock.h  sink.h  timestamp_formatter.h
include/bitlog/bundled/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
include/bitlog/common/: bounded_queue.h  common.h  rte_memcpy.h  types.h
include/bitlog/detail/: backend.h  bounded_queue.h  common.h  decode.h  encode.h  frontend.h  rte_memcpy.h
include/bitlog/frontend/: encode.h  frontend_impl.h
scripts/: rename_libfmt.py
test/: CMakeLists.txt  bounded_queue_test.cpp  doctest.h  doctest_main.cpp  test_backend_impl.cpp  test_bitlog_singleton.cpp  test_bounded_queue.cpp  test_cached_timestamp_builder.cpp  test_encode.cpp  test_encode_decode.cpp  test_frontend_impl.cpp  test_frontend_macro_metadata.cpp  test_frontend_singleton.cpp  test_log.cpp  test_logger.cpp  test_macro_metadata.cpp  test_metadata_files.cpp  test_pattern_formatter.cpp  test_thread_queue_manager.cpp  test_timestamp_formatter.cpp  test_utils.h
